apps/nginx-app/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-svc-ingress
  annotations:
    # konghq.ingress.kubernetes.io/rewrite-target: /
    # ingress.kubernetes.io/service-upstream: "true"
    # konghq.com/path: /
    konghq.com/strip-path: 'true'
    # plugins.konghq.com: http-log
spec:
  ingressClassName: kong
  rules:
  # - host: nginx.com
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: my-nginx-svc
            port: 
              # name: http
              number: 80
